--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
 
     %title= t('title.pintosign')
-    = stylesheet_link_tag 'application', :media => 'screen, projection, print'
+    = stylesheet_link_tag 'pintosign', :media => 'screen, projection, print'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=PT+Sans+Narrow:700'
     = csrf_meta_tag
 
