--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,8 +6,8 @@
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
     %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
 
-    %title= t('title.pintosign')
-    = stylesheet_link_tag 'pintosign', :media => 'screen, projection, print'
+    %title= t('pintosign.title')
+    = stylesheet_link_tag 'screen', 'pintosign', :media => 'screen, projection, print', :cache => 'application'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=PT+Sans+Narrow:700'
     = csrf_meta_tag
 
