Navigation correction done.

--- a/app/assets/stylesheets/pintosign.css.sass
+++ b/app/assets/stylesheets/pintosign.css.sass
@@ -63,6 +63,10 @@ body#pinto_sign
             left: 48px
           &#art_children
             left: 178px
+          &#biographie_children
+            left: 266px
+          &#sonstiges_children
+            left: 444px
           li
             margin-right: 25px
 
