Point is now a point on the internet explorer.

--- a/app/assets/stylesheets/pintosign.css.sass
+++ b/app/assets/stylesheets/pintosign.css.sass
@@ -78,8 +78,10 @@ body#pinto_sign
     +border-radius(15px)
     position: relative
     top: -17px
+    behavior: url(/ie-css3.htc)
 
   #pinto-overview-navigation
     position: relative
     margin-left: 50%
     left: -236px
+    border: none
