--- a/app/assets/stylesheets/pintosign.css.sass
+++ b/app/assets/stylesheets/pintosign.css.sass
@@ -52,7 +52,7 @@ body#pinto_sign
           display: block
           font-size: 32px
           line-height: 46px
-          font-family: 'PT Sans Narrow', sans-serif
+          font-weight: bold
           &.active
             color: $hover
         ul
