--- a/app/assets/stylesheets/pintosign.css.sass
+++ b/app/assets/stylesheets/pintosign.css.sass
@@ -33,6 +33,8 @@ body#pinto_sign
       margin-bottom: 30px
     ul
       +no-bullets
+      margin: 0 0 0 45px
+      padding: 0
     p img
       float: left
       margin-right: 40px
