--- a/app/assets/stylesheets/pintosign.css.sass
+++ b/app/assets/stylesheets/pintosign.css.sass
@@ -38,6 +38,9 @@ body#pinto_sign
     p img
       float: left
       margin-right: 40px
+    a
+      +hover-link
+      color: $color_violet
 
   #navigation
     height: 95px
