Navigation css optimized.

--- a/app/assets/stylesheets/pintosign.css.sass
+++ b/app/assets/stylesheets/pintosign.css.sass
@@ -65,13 +65,13 @@ body#pinto_sign
           left: 0
           border-bottom: none
           &#liveart_children
-            left: 48px
+            left: 87px
           &#art_children
-            left: 210px
+            left: 343px
           &#biographie_children
             left: 266px
-          &#sonstiges_children
-            left: 543px
+          &#info_children
+            left: 663px
           li
             margin-right: 25px
 
