Sass update and navigation styling.

--- a/app/assets/stylesheets/pintosign.sass
+++ b/app/assets/stylesheets/pintosign.sass
@@ -65,15 +65,17 @@ body#pinto_sign
           left: 0
           border-bottom: none
           &#liveart_children
-            left: 87px
+            left: 187px
           &#art_children
-            left: 343px
+            left: 351px
           &#biographie_children
             left: 266px
           &#info_children
-            left: 663px
+            left: 683px
           li
             margin-right: 25px
+            a
+              font-size: 24px
 
   #cirle.orange
     display: block
