--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
         = @page.title + " | "
       = t('pintosign.title')
     = stylesheet_link_tag 'screen', 'pintosign', :media => 'screen, projection, print'
-    = javascript_include_tag 'application', 'cufon-yui', 'Ashby_700.font', 'cufon'
+    = javascript_include_tag 'application', 'cufon-yui', 'Ashby_700.font', 'cufon', 'easySlider1.7', 'slider'
 
   %body#pinto_sign
     <!-- Main Content -->
