Easyslider button link changed.

--- a/app/assets/stylesheets/partials/_easy_slider.sass
+++ b/app/assets/stylesheets/partials/_easy_slider.sass
@@ -51,10 +51,10 @@
   position: relative
   width: 40px
   height: 77px
-  background: url("/assets/btn_prev.png") no-repeat 0 0
+  background: url("/images/btn_prev.png") no-repeat 0 0
 
 #nextBtn a, #slider1next a
-  background: url("/assets/btn_next.png") no-repeat 0 0
+  background: url("/images/btn_next.png") no-repeat 0 0
 
 // numeric controls
 
