Easy slider css extended for a smaller slider window.

--- a/app/assets/stylesheets/partials/_easy_slider.sass
+++ b/app/assets/stylesheets/partials/_easy_slider.sass
@@ -33,18 +33,21 @@
   height: 320px
   overflow: hidden
 
+#slider.small li
+  height: 220px
+
 #prevBtn, #nextBtn, #slider1next, #slider1prev
   display: block
   width: 40px
   height: 40px
   position: relative
   left: -45px
-  top: -180px
+  top: -150px
   z-index: 1000
 
 #nextBtn, #slider1next
   left: 935px
-  top: -220px
+  top: -190px
 
 #prevBtn a, #nextBtn a, #slider1next a, #slider1prev a
   display: block
