--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,10 @@
         = @page.title + " | "
       = t('pintosign.title')
     = stylesheet_link_tag 'screen', 'pintosign', :media => 'screen, projection, print'
+    %link{:rel => "stylesheet", :type => "text/css", :href => "/fancybox/jquery.fancybox-1.3.4.css", :media => "screen"}
     = javascript_include_tag 'application', 'cufon-yui', 'Ashby_700.font', 'cufon', 'easySlider1.7', 'slider'
+    %script{:type => "text/javascript", :src => "/fancybox/jquery.fancybox-1.3.4.pack.js"}
+    = javascript_include_tag 'fancybox'
 
   %body#pinto_sign
     <!-- Main Content -->
