Pinto on travel with bus added.

--- a/app/assets/stylesheets/pintosign.sass
+++ b/app/assets/stylesheets/pintosign.sass
@@ -41,7 +41,11 @@ body#pinto_sign
     a
       +hover-link
       color: $color_violet
-
+  #pinto-auf-reisen
+    +replace-text('/images/small_bus.png')
+    height: 40px
+    width: 100px
+    margin-top: 6px
   #navigation
     height: 95px
     margin-bottom: 75px
