Styling for new images add.

--- a/app/assets/stylesheets/pintosign.sass
+++ b/app/assets/stylesheets/pintosign.sass
@@ -25,7 +25,7 @@ body#pinto_sign
   #content
     color: $color_violet
     font-family: 'Century Gothic', sans-serif
-    font-size: 22px
+    font-size: 18px
     line-height: 1.3em
     h1
       font-weight: 150
@@ -96,3 +96,10 @@ body#pinto_sign
     margin-left: 50%
     left: -236px
     border: none
+
+  #fb-game-description
+    float: left
+  #button
+    margin:
+      left: 115px
+      top: -20px
