New styles for potz 1000 galery.

--- a/app/assets/stylesheets/pintosign.sass
+++ b/app/assets/stylesheets/pintosign.sass
@@ -103,3 +103,13 @@ body#pinto_sign
     margin:
       left: 115px
       top: -20px
+
+  #potz1000
+    float: left
+    display: inline
+    li
+      float: left
+      margin:
+        right: 10px
+        bottom: 4px
+
