A little css fix for the title.

--- a/app/assets/stylesheets/pintosign.sass
+++ b/app/assets/stylesheets/pintosign.sass
@@ -31,6 +31,7 @@ body#pinto_sign
       font-weight: 150
       font-size: 32px
       margin-bottom: 30px
+      line-height: 1.6em
     ul
       +no-bullets
       margin: 0 0 0 45px
