--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,15 +18,7 @@
     #container
       - if @page
         #navigation
-          - navigation_for(homepage.id) { |pages| @pages = pages }
-          %ul
-            - @pages.each do |page|
-              %li
-                = link_to page.title, page.link, :class => "#{(current_page == page or current_page.parent_pages.include?page) ? 'active' : ''}", :id => page.slug
-                - if (page == current_page or current_page.parent_pages.include?page) && !page.childs.empty?
-                  %ul{:id => "#{page.slug}_children"}
-                    - page.childs.each do |child|
-                      %li= link_to child.title, child.link, :class => "#{child == current_page ? 'active' : ''}"
+          = render_navigation(context: :main)
           #cirle.orange
 
       #content
