Add some bootstrap overrides.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -1,3 +1,9 @@
+$linkColor:      #7d6b82
+$linkColorHover: #e28069
+$grayLighter:    none
+$baseFontSize:   20px
+$baseLineHeight: 24px
+
 @import 'bootstrap'
 
 .container-fluid
@@ -11,3 +17,10 @@
 #top-row
   margin:
     bottom: 20px
+
+#navigation > .nav
+  float: left
+
+  > li > ul
+
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif
