Extract the head into a partial.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,6 @@
 doctype 5
 html
-  head
-    = yield(:head)
-    = csrf_meta_tags
-    meta name="viewport" content="width=device-width, initial-scale=1.0"
-    = stylesheet_link_tag    "application", "data-turbolinks-track" => true, media: "all"
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+  = render 'layouts/head'
   body
     .container-fluid
       .row
