Style the welcome page.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -24,3 +24,8 @@ $baseLineHeight: 24px
   > li > ul
 
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif
+
+body
+  &#welcome
+    padding:
+      top: 95px
