--- a/app/views/layouts/welcome.html.slim
+++ b/app/views/layouts/welcome.html.slim
@@ -1,7 +1,8 @@
 doctype 5
 html
   = render 'layouts/head'
-  body
+  body#welcome
     .container
       .row
-        .col-md-12 = yield
+        .col-md-7.col-md-offset-3
+          = yield
