--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -1,10 +1,15 @@
+$pintoOrange:    #e18069
 $linkColor:      #7d6b82
-$linkColorHover: #e28069
+$linkColorHover: $pintoOrange
 $grayLighter:    none
 $baseFontSize:   20px
 $baseLineHeight: 24px
+$ballSize:       30px
 
 @import 'bootstrap'
+
+html, body
+  height: 100%
 
 .container-fluid
   padding:
@@ -20,10 +25,17 @@ $baseLineHeight: 24px
 
 #navigation > .nav
   float: left
+  width: 100%
 
   > li > ul
 
-    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif
+    font-family:         "Century Gothic", CenturyGothic, AppleGothic, sans-serif
+    list-style-type:     disc
+    list-style-position: inside
+    margin:              0 0 12px 15px
+
+  a.selected
+    color: $pintoOrange
 
 body
   &#welcome
@@ -32,7 +44,37 @@ body
 
 #image
   padding:
-    left: 0px
+    left:     0px
   img
     width:  100%
     height: 100px
+  background:
+    color:  white
+
+#main-navigation-pinto
+  margin:
+    bottom: 40px
+  a
+    font:
+      weight: bold
+
+#pinto-ball
+  float:   right
+  display: block
+  height:  $ballSize
+  width:   $ballSize
+  border:
+    radius: $ballSize
+  background:
+    color: $pintoOrange
+
+#pinto-line
+  display: block
+  position: absolute
+  left: 20px
+  height: 100%
+  width: 2px
+  background-color: $pintoOrange
+  top: 0px
+  margin-top: 160px
+  left: 6.53766%
