Correct the nav colors on selected.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -36,6 +36,10 @@ html, body
 
   a.selected
     color: $pintoOrange
+  > li.selected > ul > li
+    color: $linkColor
+    &.selected
+      color: $pintoOrange
 
 body
   &#welcome
