--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -11,6 +11,10 @@ $ballSize:       30px
 html, body
   height: 100%
 
+.page-content
+  padding:
+    top: 7px
+
 .container-fluid
   padding:
     right: 0px
@@ -23,9 +27,12 @@ html, body
   margin:
     bottom: 20px
 
-#navigation > .nav
-  float: left
-  width: 100%
+#navigation
+  margin-left: 1.12766%
+
+  > .nav
+    float: left
+    width: 100%
 
   > li > ul
 
