Fix navigation width.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -28,7 +28,9 @@ html, body
     bottom: 20px
 
 #navigation
-  margin-left: 1.12766%
+  width: 20.40426%
+  margin:
+    left: 1.12766%
 
   > .nav
     float: left
