--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -1,5 +1,5 @@
 head
-  = yield(:head)
+  = yield :head
   = csrf_meta_tags
   meta name="viewport" content="width=device-width, initial-scale=1.0"
   = stylesheet_link_tag    "application", "data-turbolinks-track" => true, media: "all"
