--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -47,7 +47,9 @@ html, body
     color: $pintoOrange
 
   li.selected > ul
-    margin: 0 0 12px 30px
+    margin: 0 0 12px 0px
+    > li.selected > ul li.selected
+      margin: 0 0 12px 30px
 
   > li.selected > ul
 
