--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,7 @@
  *= require refinery/formatting
  *= require refinery/theme
  *= require refinery/site_bar
+ *= require font-awesome
  *= require bootstrap_and_override
  *= require_self
  */
