Update the variable names.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -1,10 +1,11 @@
-$pintoOrange:    #e18069
-$linkColor:      #7d6b82
-$linkColorHover: $pintoOrange
-$grayLighter:    none
-$baseFontSize:   20px
-$baseLineHeight: 24px
-$ballSize:       30px
+$pintoOrange:       #e18069
+$link-color:        #7d6b82
+$link-hover-color:  $pintoOrange
+$grayLighter:       none
+$baseFontSize:      20px
+$baseLineHeight:    24px
+$ballSize:          30px
+$nav-link-hover-bg: transparent
 
 @import 'bootstrap'
 
@@ -54,7 +55,7 @@ html, body
   > li.selected > ul
 
     > li
-      color: $linkColor
+      color: $link-color
       &.selected
         color: $pintoOrange
 
