--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -36,6 +36,9 @@ html, body
 #menu
   > ul.nav > li
     color: $link-color
+    font:
+      size: 20px
+      weight: bold
 
     &.first
       margin:
