Improve navigation styling.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -64,8 +64,13 @@ html, body
           color: $pintoOrange
 
   // Bootstrap override
-  .nav > li > a
-    padding: 5px 0 5px 0
+  .nav > li
+    > a
+      padding: 5px 0 5px 0
+    ul > li
+      list-style-type:     disc
+      > a
+        padding: 0
 
 
 body
