Improve navigation style.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -31,7 +31,9 @@ html, body
 #navigation
   width: 20.40426%
   margin:
-    left: 1.12766%
+    left: 0
+  padding:
+    left: 0
 
 #menu
   > ul.nav > li
@@ -52,7 +54,7 @@ html, body
       font-family:         "Century Gothic", CenturyGothic, AppleGothic, sans-serif
       list-style-type:     disc
       list-style-position: inside
-      margin:              0 0 12px 15px
+      margin:              0 0 12px 0
 
     &.selected
       > a
