--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -113,3 +113,10 @@ body
   top: 0px
   margin-top: 160px
   left: 7%
+
+// Attache the refinery site bar to the bottom.
+#site_bar
+  position: absolute
+  bottom:   0
+  left:     0
+  right:    0
