--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -120,3 +120,13 @@ body
   bottom:   0
   left:     0
   right:    0
+
+#gallery
+  list-style: none
+  li
+    width: 100px
+    float: left
+    margin:
+      right:  10px
+      bottom: 10px
+
