Initialize the js behaviour of the gallery.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,5 +4,6 @@
  *= require refinery/site_bar
  *= require font-awesome
  *= require bootstrap_and_override
+ *= require jquery.fancybox
  *= require_self
  */
