Style the content text.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -1,5 +1,6 @@
 $pintoOrange:       #e18069
-$link-color:        #7d6b82
+$pintoViolett:      #7d6b82
+$link-color:        $pintoViolett
 $link-hover-color:  $pintoOrange
 $grayLighter:       none
 $baseFontSize:      20px
@@ -146,3 +147,11 @@ body
 #querbilder-quote
   border:
     right: 0
+
+#body_content
+  color:    $pintoViolett
+  font:
+    family: "Century Gothic",sans-serif
+    size:   18px
+  line:
+    height: 1.3em
