Style the prev and next buttons of the slider.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -159,3 +159,23 @@ body
 #slider
   ul li
     list-style-type: none
+
+#nextBtn
+  height: 20px
+  width:  20px
+  a
+    text-indent: -999em
+    display:     block
+    background:
+      image:  asset-data-url("btn_next.png")
+      repeat: no-repeat
+
+#prevBtn
+  height: 20px
+  width:  20px
+  a
+    text-indent: -999em
+    display:     block
+    background:
+      image:  asset-data-url("btn_prev.png")
+      repeat: no-repeat
