Style the slider buttons.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -162,9 +162,17 @@ body
     list-style-type: none
 
 #nextBtn
-  height: 20px
-  width:  20px
+  display:  block
+  width:    40px
+  height:   40px
+  position: relative
+  left:     1035px
+  top:      -190px
+  z-index:  1000
+
   a
+    width: 40px
+    height: 40px
     text-indent: -999em
     display:     block
     background:
@@ -172,9 +180,17 @@ body
       repeat: no-repeat
 
 #prevBtn
-  height: 20px
-  width:  20px
+  display: block
+  width: 40px
+  height: 40px
+  position: relative
+  left: -45px
+  top: -150px
+  z-index: 1000
+
   a
+    width: 40px
+    height: 40px
     text-indent: -999em
     display:     block
     background:
