Show the pinto ball and line allway.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,8 +9,8 @@ html
         .col-md-1
         = render "/refinery/header"
         .col-md-8 = yield
-    #pinto-ball-container.visible-lg-block
+    #pinto-ball-container
       #pinto-ball
-    #pinto-line.visible-lg-block
+    #pinto-line
     = render '/refinery/site_bar', head: true
     = render "/refinery/javascripts"
