Add the mobile navbar.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -29,12 +29,24 @@ html, body
   margin:
     bottom: 20px
 
-#navigation
+#sidebar
   width: 20.40426%
   margin:
     left: 0
   padding:
     left: 0
+
+.navbar-default
+  margin:
+    top: 25px
+  border:
+    color: transparent
+  background:
+    color: transparent
+
+  .navbar-toggle
+    background:
+      color: white
 
 #menu
   > ul.nav > li
