--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -1,2 +1,2 @@
-#navigation.col-md-3
-  == Refinery::Pages::MenuPresenter.new(refinery_menu_pages, self).to_html
+#sidebar.col-md-3 role="navigation"
+  == side_navigation.to_html
