--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,12 @@ html
     = render '/refinery/head'
   body id=canonical_id(@page)
     = head_image
+    div class="navbar navbar-default navbar-fixed-top" role="navigation"
+      div class="container"
+        button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav"
+          span class="icon-bar"
+          span class="icon-bar"
+          span class="icon-bar"
     .container-fluid
       .row-fluid
         .col-md-1
