--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -177,9 +177,9 @@ body
   display:  block
   width:    40px
   height:   40px
-  position: relative
-  left:     1035px
-  top:      -190px
+  position: absolute
+  right: -40px
+  top: 135px
   z-index:  1000
 
   a
@@ -195,9 +195,9 @@ body
   display: block
   width: 40px
   height: 40px
-  position: relative
-  left: -45px
-  top: -150px
+  position: absolute
+  left: 0px
+  top: 135px
   z-index: 1000
 
   a
