Improve the style.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -196,7 +196,7 @@ body
   width: 40px
   height: 40px
   position: absolute
-  left: 0px
+  left: -35px
   top: 135px
   z-index: 1000
 
@@ -216,3 +216,7 @@ body
       size: 32px
     margin-bottom: 30px
     line-height: 1.6em
+
+a:focus,
+a:active
+  outline: none
